<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yollowish"
    tools:context="presentation.ShelfcardActivity">


    <TextView
        android:id="@+id/shelfCard"
        android:layout_width="258dp"
        android:layout_height="260dp"
        android:background="@color/yollowishButtonColor"
        android:gravity="center"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/flip_button2"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintStart_toEndOf="@+id/previous_button"
        app:layout_constraintTop_toBottomOf="@+id/user_card" />

    <ImageView
        android:id="@+id/next_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="377dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="190dp"
        android:contentDescription="@string/next_button"
        android:onClick="nextCard"
        app:layout_constraintBottom_toTopOf="@+id/delete_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/shelfCard"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/next_button" />

    <ImageView
        android:id="@+id/previous_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="377dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="241dp"
        android:contentDescription="@string/previous_button"
        android:onClick="prevCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shelfCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/previous_button" />

    <TextView
        android:id="@+id/user_card"
        android:layout_width="233dp"
        android:layout_height="76dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="150dp"
        android:background="@color/yollowish"
        android:gravity="center"
        android:text="@string/my_cards"
        android:textAlignment="center"
        android:textColor="@color/grayish"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/shelfCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/flip_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/white"
        android:onClick="flipButton2"
        android:text="@string/flip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shelfCard" />

    <ImageView
        android:id="@+id/delete_button2"
        android:layout_width="35dp"
        android:layout_height="42dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/Delete_button"
        android:onClick="deleteCard2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/flip_button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/delete_button" />

    <Button
        android:id="@+id/addFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/yollowishButtonColor"
        android:text="@string/addToFolder"
        android:textColor="@color/grayish"
        android:textStyle="bold"
        android:onClick="addToFolder"
        app:layout_constraintBottom_toTopOf="@+id/shelfCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_card" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="334dp"
        android:layout_marginBottom="117dp"
        android:contentDescription="@string/home_button"
        app:layout_constraintBottom_toTopOf="@+id/card_front"
        android:onClick="openOptionsActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_button" />



</androidx.constraintlayout.widget.ConstraintLayout>