...
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/makeFlashCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
...
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/cardShelf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
...
