...
        android:textColor="@color/grayish"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_guestLogin"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_guestLogin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="158dp"
...
